# SynthCoil

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  winBuild.sh  windows-toolchain.cmake
include/: audio.h  freqs.h  imgv.h  shapeGen.h  vulkRend.h
shaders/: coil.frag  coil.vert
src/: audio.cpp  audio.h  freqs.cpp  freqs.h  imgv.cpp  main.cpp  shapeGen.cpp  vulkRend.cpp
